--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Kuietk</title>
   </head>
   <body>
-	  <h1>
-  		in progress
-		</h1>
+	  <h1>HEADING</h1>
+	  <p>paragraph.</p>
   </body>
 </html>
