--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
 	  <h1>HEADING</h1>
 	  <p>paragraph.</p>
+	  <img src="img/bat.jpg" alt="bat" width="500" height="500">
   </body>
 </html>
  
