--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Kuietk</title>
+    <title>w3</title>
   </head>
+
   <body>
+
 	  <h1>HEADING</h1>
+
+	  <br>
+
 	  <p>paragraph.</p>
+	  
+	  <p style="color:red;">this is a red paragraph.</p>
+		<p title="tooltip">This has a tooltip.</p>
+	  <a href="https://www.google.com">GOOGLE</a>
+
 	  <img src="img/bat.jpg" alt="bat" width="500" height="500">
+
   </body>
+
 </html>
  
