--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <body>
 
 	  <h1>HEADING</h1>
-
-<br>
-
+	  <h1 style="font-size:60px;">Custom heading</h1>
+	  
 	  <p>paragraph.</p>
 	  
 	  <p style="color:red;">this is a red paragraph.</p>
