--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	  <h1>HEADING</h1>
 <hr>
 	  <h1 style="font-size:60px;">Custom heading</h1>
+
+		<pre>
+		this
+		is
+		the 
+		pre
+		tag
+		</pre>
 	  
 	  <p>paragraph.</p>
 	  
