--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <hr>
 	  <h1 style="font-size:60px;">Custom heading</h1>
 
-		<pre>
-		this
-		is
-		the 
-		pre
-		tag
+		<pre style="color:blue;">
+this
+is
+the 
+pre
+tag
 		</pre>
 	  
 	  <p>paragraph.</p>
