--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <hr>
 	  <h1 style="font-size:60px;">Custom heading</h1>
 
-		<pre style="color:blue;">
-this
-is
-the 
-pre
-tag
+		<pre style="color:green;">
+this is the pre tag
+	spaces and line breaks are 
+	  preserved
 		</pre>
 	  
 	  <p>paragraph.</p>
