--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ this is the pre tag
 	  
 	  <p>paragraph.</p>
 	  
-	  <p style="color:red;">this is a red paragraph.</p>
+	  <p style="color:red; text-align:center;">this is a red paragraph.</p>
 		<p title="tooltip">This has a tooltip.</p>
 	  <a href="https://www.google.com">GOOGLE</a>
 <br>
