--- a/index.html
+++ b/index.html
@@ -5,26 +5,7 @@
   </head>
 
   <body style="background-color:grey;">
-
-	  <h1>HEADING</h1>
-<hr>
-	  <h1 style="font-size:60px;">Custom heading</h1>
-
-		<pre style="color:green;">
-this is the pre tag
-	spaces and line breaks are 
-	  preserved
-		</pre>
-	  
-	  <p>paragraph.</p>
-	  
-	  <p style="color:red; text-align:center;">this is a red paragraph.</p>
-		<p title="tooltip">This has a tooltip.</p>
-	  <a href="https://www.google.com">GOOGLE</a>
-<br>
-	  <img src="img/bat.jpg" alt="bat" width="500" height="500">
-
-  </body>
-
+  <a href="w3.html">w3 page</a>
+	</body>
 </html>
  
