--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>w3</title>
+    <title>KuietK.github.io</title>
   </head>
 
   <body style="background-color:grey;">
-  <a href="w3.html">w3 page</a>
+  <a href="w3.html" style="font-size:300px;">w3 page</a>
 	</body>
 </html>
  
