--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
 
   <body style="background-color:grey;">
-  <a href="w3.html" style="font-size:300px;">w3 page</a>
+	<h1>other projects</h1>
+  
+  <a href="w3.html" style="font-size:150%;">w3 page</a>
 	</body>
 </html>
  
