--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body style="background-color:grey;">
-	<h1>other projects</h1>
+	<h1>OTHER PROJECTS</h1>
   
   <a href="w3.html" style="font-size:50px;">w3 page</a>
 	</body>
