--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
 
   <body style="background-color:grey;">
+	<h1>Kuiet's Homepage</h1>
+<hr>
 	<h1>OTHER PROJECTS</h1>
   
   <a href="w3.html" style="font-size:50px;">w3 page</a>
