--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>KuietK.github.io</title>
   </head>
 
-  <body style="background-color:grey;">
+  <body style="background-color:black; color:white;">
 	<h1>Kuiet's Homepage</h1>
 <hr>
 	<h1>OTHER PROJECTS</h1>
